# FileBackup

./: CMakeLists.txt  README.md  bp  code.txt  cpt  search.cpp
Backup/2023-12-27/21:52:57/: CHANGELOG.rst  README.md  setup.cfg
Backup/2023-12-27/21:52:57/test/: test_copyright.py  test_flake8.py  test_pep257.py
Backup/2023-12-27/21:54:20/: copy.cpp  crypto.cpp  huffman.cpp  main.cpp  search.cpp
Backup/2023-12-27/21:56:28/: crypto.cpp  huffman.cpp  main.cpp
Recover/2023-12-27/21:56:55/: copy.cpp  search.cpp
Test/: CMakeLists.txt  huffman.txt  test.cpp
Test/dir_test/2023-12-21/11:29:50/: s_test
Test/dir_test/2023-12-26/16:30:38/: test.cpp
Test/doc/: t_test  test
Test/tmp/: huffman.txt
include/: copy.h  crypto.h  huffman.h  search.h
src/: copy.cpp  crypto.cpp  huffman.cpp  main.cpp  search.cpp
test/: CMakeLists.txt  copy_test.cpp  cpt  crypto_test.cpp  huffman.txt  p  test  test.cpp
test/dir_test/2023-12-20 20:49:59/: t_test  test.cpp
test/dir_test/2023-12-21/11:34:45/: s2_test
test/doc/: pipe  t_test
